examples/webserver/demo-translator-frontend/k8s/gateway.yaml
#
# Copyright (c) 2017, 2018 Oracle and/or its affiliates. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helidon-webserver-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /translator
        backend:
          serviceName: helidon-webserver-translator-frontend
          servicePort: 8080
      - path: /translator/break
        backend:
          serviceName: helidon-webserver-translator-backend
          servicePort: 9080
      - path: /translator/fix
        backend:
          serviceName: helidon-webserver-translator-backend
          servicePort: 9080
